--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,13 @@ uuid = "b58d0ad7-a232-4a3b-86f5-cbe89507d905"
 authors = ["ArnoStrouwen <arno.strouwen@telenet.be> and contributors"]
 version = "0.1.0"
 
+[deps]
+LatinHypercubeSampling = "a5e1c1ea-c99a-51d3-a14d-a9a37257b02d"
+Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
+
 [compat]
 julia = "1.6"
 
