--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,10 @@ authors = ["ArnoStrouwen <arno.strouwen@telenet.be> and contributors"]
 version = "0.1.0"
 
 [deps]
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 LatinHypercubeSampling = "a5e1c1ea-c99a-51d3-a14d-a9a37257b02d"
 Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
-OptimizationNLopt = "4e6fcdb7-1186-4e1f-a706-475e75c168bb"
+OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 
