--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 MaxPro = "b58d0ad7-a232-4a3b-86f5-cbe89507d905"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
