--- a/.github/workflows/DocCompatHelper.yml
+++ b/.github/workflows/DocCompatHelper.yml
@@ -13,4 +13,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COMPATHELPER_PRIV: ${{ secrets.DOCUMENTER_KEY }}
-        run: julia -e 'cd("./docs"); using CompatHelper; CompatHelper.main()'
+        run: julia -e 'pwd();cd("./docs"); using CompatHelper; CompatHelper.main()'
