--- a/.github/workflows/DocCompatHelper.yml
+++ b/.github/workflows/DocCompatHelper.yml
@@ -9,8 +9,12 @@ jobs:
     steps:
       - name: Pkg.add("CompatHelper")
         run: julia -e 'using Pkg; Pkg.add("CompatHelper")'
+      - name: ls
+        run: ls
+      - name: cd
+        run: cd docs
       - name: CompatHelper.main()
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           COMPATHELPER_PRIV: ${{ secrets.DOCUMENTER_KEY }}
-        run: julia -e 'pwd();cd("./docs"); using CompatHelper; CompatHelper.main()'
+        run: julia -e 'using CompatHelper; CompatHelper.main()'
